# aim

./: .clang-format  .gitignore  .pylintrc  CMakeLists.txt
aim/: wrapper.cc
aim/random/: random.cc
include/random/: random.hh
tests/aim/: test_aim.py
tests/random/: test_random.py
